# ORM

./: Cargo.toml  README.md
.github/: start-postgres-tls.sh
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  postgres-ha.md  production-readiness.md  roadmap.md
src/: ast.rs  decode.rs  error.rs  executor.rs  expression.rs  function.rs  lib.rs  schema.rs  value.rs  window.rs
src/compiler/: dialect.rs  mod.rs  validation.rs
src/drivers/postgres/: error.rs  executor.rs  metrics.rs  migration.rs  mod.rs  options.rs  parameters.rs  row.rs  tls.rs  transaction.rs
src/drivers/sqlite/: error.rs  executor.rs  migration.rs  mod.rs  options.rs  row.rs  savepoint.rs  transaction.rs
src/migration/: backend.rs  definition.rs  error.rs  mod.rs  runner.rs
src/query/: cte.rs  delete.rs  insert.rs  mod.rs  raw.rs  select.rs  update.rs
tests/: executor.rs  migrations.rs  postgres_ha.rs  postgres_integration.rs  query_compilation.rs  sqlite_integration.rs  sqlite_migrations.rs  sqlite_transactions.rs  value_decode.rs
