[package]
name = "a3s-orm"
version = "0.1.0"
edition = "2021"
description = "A type-safe, executor-neutral SQL query builder for Rust"
license = "MIT"
repository = "https://github.com/A3S-Lab/ORM"
keywords = ["database", "query-builder", "sql", "postgres", "sqlite"]
categories = ["database"]

[features]
default = ["sqlite"]
postgres = ["dep:bytes", "dep:deadpool-postgres", "dep:tokio", "dep:tokio-postgres"]
sqlite = ["dep:tokio", "dep:tokio-rusqlite"]

[dependencies]
async-trait = "0.1"
bytes = { version = "1", optional = true }
deadpool-postgres = { version = "0.14", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["sync"], optional = true }
tokio-postgres = { version = "0.7", optional = true }
tokio-rusqlite = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
